--- a/TConverter/Base.lproj/Main.storyboard
+++ b/TConverter/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,33 +14,32 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TConverter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sun" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lQU-ua-9o9">
-                                <rect key="frame" x="0.0" y="-8" width="414" height="904"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lQU-ua-9o9">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="822"/>
                             </imageView>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="4TL-sB-MdM">
-                                <rect key="frame" x="60" y="323" width="255" height="42"/>
+                                <rect key="frame" x="60" y="347" width="255" height="129"/>
                                 <connections>
                                     <action selector="sliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Ou3-Ux-uNg"/>
                                 </connections>
                             </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0ºF" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qci-id-He2">
-                                <rect key="frame" x="150" y="414" width="75" height="60"/>
+                                <rect key="frame" x="150" y="525" width="75" height="60"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TConverter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nv8-ly-ErE">
-                                <rect key="frame" x="75.5" y="40" width="224" height="45"/>
+                                <rect key="frame" x="75.666666666666686" y="64" width="224" height="45"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="35"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0ºC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fc1-TQ-VUE">
-                                <rect key="frame" x="150" y="202" width="83" height="60"/>
+                                <rect key="frame" x="150" y="226" width="83" height="60"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -49,16 +48,21 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="4TL-sB-MdM" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="3gD-pf-l2z"/>
+                            <constraint firstItem="lQU-ua-9o9" firstAttribute="height" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="height" id="82M-P2-qIm"/>
                             <constraint firstItem="4TL-sB-MdM" firstAttribute="top" secondItem="Fc1-TQ-VUE" secondAttribute="bottom" constant="61" id="F5j-jn-wd2"/>
                             <constraint firstItem="Fc1-TQ-VUE" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="qci-id-He2" secondAttribute="leading" id="Gva-BI-Eis"/>
+                            <constraint firstItem="lQU-ua-9o9" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="MAJ-H3-Hhx"/>
                             <constraint firstItem="qci-id-He2" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Szm-fy-JHI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="qci-id-He2" secondAttribute="bottom" constant="193" id="XvT-rV-IJK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Fc1-TQ-VUE" secondAttribute="trailing" constant="142" id="Z5G-BE-bqn"/>
                             <constraint firstItem="nv8-ly-ErE" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Zma-yr-aYw"/>
+                            <constraint firstItem="lQU-ua-9o9" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dya-yZ-SE6"/>
                             <constraint firstItem="4TL-sB-MdM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="62" id="jEH-Oa-Fgm"/>
                             <constraint firstItem="4TL-sB-MdM" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="kEy-N5-Nph"/>
+                            <constraint firstItem="lQU-ua-9o9" firstAttribute="centerX" secondItem="nv8-ly-ErE" secondAttribute="centerX" id="mHI-JG-Nhc"/>
                             <constraint firstItem="qci-id-He2" firstAttribute="top" relation="lessThanOrEqual" secondItem="4TL-sB-MdM" secondAttribute="bottom" constant="50" id="rC0-We-iX8"/>
                             <constraint firstItem="nv8-ly-ErE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="w8s-Cb-5A4"/>
+                            <constraint firstItem="lQU-ua-9o9" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="wDI-bI-PAl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -70,7 +74,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139.13043478260872" y="143.30357142857142"/>
+            <point key="canvasLocation" x="138.40000000000001" y="141.87192118226602"/>
         </scene>
     </scenes>
     <resources>
